--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,37 +13,8 @@
     <title>MVC</title>
   </head>
   <body>
-    <!-----------------------------------------------------Navbar--------------------------------------------------------->
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">MVC</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users">Users</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <%- include('navbar') -%>
+    <!-----------------------------------------------------User--------------------------------------------------------->
 
     <div class="container">
       <form action="/addUser" method="post">
@@ -68,6 +39,7 @@
         <button class="btn btn-outline-primary">Add User</button>
       </form>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
