--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -13,6 +13,7 @@
     <title>Update User</title>
   </head>
   <body>
+    <!-----------------------------------------------------Navbar--------------------------------------------------------->
     <%- include('navbar') -%>
 
     <!-----------------------------------------------------Update User--------------------------------------------------------->
