--- a/views/users.ejs
+++ b/views/users.ejs
@@ -13,6 +13,8 @@
     <title>MVC</title>
   </head>
   <body>
+    <!-----------------------------------------------------Navbar--------------------------------------------------------->
+
     <%- include('navbar') -%>
     <!-----------------------------------------------------Table--------------------------------------------------------->
 
