--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,13 @@
   </head>
   <body>
     <%- include('navbar') -%>
+
+
+
+    <div class="d-flex justify-content-center align-items-center">
+      <img src="../images/photo.png" alt="" class="center-image">
+  </div>
+   
     <!-----------------------------------------------------Add User--------------------------------------------------------->
 
     <div class="container">
@@ -33,10 +40,17 @@
           required
         />
         <input
-          name="password"
-          type="password"
+          name="phone"
+          type="tel"
           class="form-control my-3"
-          placeholder="Enter Your Password"
+          placeholder="Enter Your Phone"
+          required
+        />
+        <input
+          name="salary"
+          type="number"
+          class="form-control my-3"
+          placeholder="Enter Your Salary"
           required
         />
         <button class="btn btn-outline-primary">Add User</button>
