--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,26 @@
   <body>
     <%- include('navbar') -%>
 
+    <div class="about p-5"> 
+      <div class="container">
+          <div class="row p-5">
+              <div class="col-lg-6">
+                <img src="../images/myphoto.jpg" alt="" class="img-fluid w-56"/>
+              </div>
+            
+              <div class="col-lg-6">
+                <h2 class="text-white">About me</h2>
+                <p class="text-white mt-4">Hello! I'm Abdelrahman, a passionate backend developer specializing in Node.js. At just 21 years of age, I bring a fresh and innovative approach to the tech world. My thirst for knowledge is insatiable — every day presents an opportunity to learn something new and expand my horizons.  </p>
+
+                <p class="text-white mt-4">  I'm currently furthering my expertise in computer science at the prestigious Alexandria University, Faculty of Science. My academic journey not only equips me with formal education but also fuels my drive to take on new challenges.</p>
+                  
+                <p class="text-white mt-4"> I believe that the tech industry thrives on continual learning and adaptability. That's why I'm always eager to explore new technologies and methodologies. If you're looking for someone with a blend of youthful energy, technical proficiency, and an unyielding drive to excel, I'd love to collaborate and take on new challenges together.</p>
+                  
+                
+              </div>
+            </div>        
+      </div>
+  </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
